fix: text input: adds line height to text input to prevent descenders from clipping (#113)

--- a/src/components/Inputs/input.module.scss
+++ b/src/components/Inputs/input.module.scss
@@ -11,6 +11,7 @@
         color: var(--grey-color-60);
         font-family: 'Source Sans Pro', sans-serif;
         font-size: $text-font-size-3;
+        line-height: $text-line-height-1;
         min-width: 320px;
         padding: $space-xs calc($space-xxl + 4px) $space-xs $space-xs;
 
